--- a/docs/notebooks/intro_notebook.ipynb
+++ b/docs/notebooks/intro_notebook.ipynb
@@ -7,13 +7,17 @@
     "cell_marker": "\"\"\""
    },
    "source": [
-    "# Introducing Jupyter Notebooks in Sphinx\n",
-    "\n",
-    "This notebook showcases very basic functionality of rendering your jupyter notebooks as tutorials inside your sphinx documentation.\n",
-    "\n",
-    "As part of the LINCC Frameworks python project template, your notebooks will be executed AND rendered at document build time.\n",
-    "\n",
-    "You can read more about Sphinx, ReadTheDocs, and building notebooks in [LINCC's documentation](https://lincc-ppt.readthedocs.io/en/latest/practices/sphinx.html)"
+    "# SNAPI Demo\n",
+    "This notebook showcases very basic functionality of SNAPI, including querying databases, saving/loading files and manipulating Transient objects."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76c5d6d7",
+   "metadata": {},
+   "source": [
+    "## (1) Creating a Transient object for 2023ixf.\n",
+    "Here, we will create a mostly empty Transient object for 2023ixf. We will add information through queries."
    ]
   },
   {
@@ -23,17 +27,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sierpinsky(order):\n",
-    "    \"\"\"Define a method that will create a Sierpinsky triangle of given order,\n",
-    "    and will print it out.\"\"\"\n",
-    "    triangles = [\"*\"]\n",
-    "    for i in range(order):\n",
-    "        spaces = \" \" * (2**i)\n",
-    "        triangles = [spaces + triangle + spaces for triangle in triangles] + [\n",
-    "            triangle + \" \" + triangle for triangle in triangles\n",
-    "        ]\n",
-    "    print(f\"Printing order {order} triangle\")\n",
-    "    print(\"\\n\".join(triangles))"
+    "from snapi import Transient\n",
+    "\n",
+    "ixf_transient = Transient(iid=\"2023ixf\")\n",
+    "print(ixf_transient.id)\n",
+    "print(ixf_transient.coordinates)"
    ]
   },
   {
@@ -44,7 +42,7 @@
     "lines_to_next_cell": 1
    },
    "source": [
-    "Then, call our method a few times. This will happen on the fly during notebook rendering."
+    "Next, we'll call TNS, ALeRCE, and ANTARES to add information based on the IAU name."
    ]
   },
   {
@@ -54,8 +52,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for order in range(3):\n",
-    "    sierpinsky(order)"
+    "from snapi.query_agents import TNSQueryAgent, ALeRCEQueryAgent, ANTARESQueryAgent\n",
+    "\n",
+    "tns_query_agent = TNSQueryAgent()\n",
+    "alerce_query_agent = ALeRCEQueryAgent()\n",
+    "antares_query_agent = ANTARESQueryAgent()\n",
+    "\n",
+    "for agent in [tns_query_agent, alerce_query_agent, antares_query_agent]:\n",
+    "    query_results, _ = agent.query_transient(ixf_transient)\n",
+    "    for query_result in query_results:\n",
+    "        ixf_transient.ingest_query_info(query_result.to_dict())\n",
+    "    print(ixf_transient.internal_names)\n",
+    "    print(len(ixf_transient.photometry))"
    ]
   },
   {
@@ -65,7 +73,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sierpinsky(4)"
+    "# see all unique filters\n",
+    "print(len(ixf_transient.photometry))\n",
+    "for lc in ixf_transient.photometry.light_curves:\n",
+    "    print(lc.filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb9be410",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# see all extracted information\n",
+    "print(ixf_transient.coordinates)\n",
+    "print(ixf_transient.redshift)\n",
+    "print(ixf_transient.spec_class)  # TODO: add spec class extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f26dc275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot all photometry\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ixf_transient.photometry.plot(ax)\n",
+    "plt.show()"
    ]
   }
  ],
@@ -77,6 +116,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
