Improved Formatting functionality, correct LC + nondetection photometry plotting

--- a/docs/notebooks/intro_notebook.ipynb
+++ b/docs/notebooks/intro_notebook.ipynb
@@ -58,12 +58,11 @@
     "alerce_query_agent = ALeRCEQueryAgent()\n",
     "antares_query_agent = ANTARESQueryAgent()\n",
     "\n",
-    "for agent in [tns_query_agent, alerce_query_agent, antares_query_agent]:\n",
+    "for agent in [tns_query_agent, antares_query_agent]:\n",
     "    query_results, _ = agent.query_transient(ixf_transient)\n",
     "    for query_result in query_results:\n",
     "        ixf_transient.ingest_query_info(query_result.to_dict())\n",
-    "    print(ixf_transient.internal_names)\n",
-    "    print(len(ixf_transient.photometry))"
+    "    print(ixf_transient.internal_names)"
    ]
   },
   {
@@ -101,11 +100,64 @@
    "source": [
     "# plot all photometry\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
     "ixf_transient.photometry.plot(ax)\n",
+    "plt.legend(ncols=4, loc=\"lower center\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "363ab3db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# can also plot in flux space\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "ixf_transient.photometry.plot(ax, mags=False)\n",
+    "plt.legend(ncols=4, loc=\"lower center\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75e43ea8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from snapi import Formatter\n",
+    "\n",
+    "# can also plot each LC individually\n",
+    "formatter = Formatter()\n",
+    "for lc in ixf_transient.photometry.light_curves:\n",
+    "    fig, ax = plt.subplots(figsize=(6, 4))\n",
+    "    lc.plot(ax, formatter)\n",
+    "    plt.legend()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d897288",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ad3e31f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
