Major improvements to spectroscopy fitting

--- a/docs/notebooks/intro_notebook.ipynb
+++ b/docs/notebooks/intro_notebook.ipynb
@@ -153,14 +153,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "287e9f74",
+   "metadata": {},
+   "source": [
+    "Through TNS, we also imported spectra for 2023ixf. Let's plot these in a few different ways:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38114b7f",
+   "id": "b2e4bf76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# let's save this object for later\n",
-    "ixf_transient.save(filename=\"data/ixf_transient.hdf5\")"
+    "import matplotlib.pyplot as plt\n",
+    "from snapi import Formatter\n",
+    "\n",
+    "spectra = ixf_transient.spectroscopy\n",
+    "formatter = Formatter(linewidth=1)  # good for spectra\n",
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "spectra.plot(ax, formatter)\n",
+    "formatter.make_plot_pretty(ax)\n",
+    "formatter.add_legend(ax, ncols=2)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9c946a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from snapi import Formatter\n",
+    "\n",
+    "spectra = ixf_transient.spectroscopy\n",
+    "formatter = Formatter(linewidth=1)\n",
+    "fig, ax = plt.subplots(figsize=(8, 16))\n",
+    "spectra.plot(ax, formatter, vertical_offsets=True, overlay_lines=[\"He I\"])\n",
+    "formatter.make_plot_pretty(ax)\n",
+    "plt.show()"
    ]
   },
   {
